Uploading the web site

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1>Alexander Isiani</h1>
                 <p>PhD Student | Researcher</p>
                 <a href="https://www.linkedin.com/in/isiani-alexander-chukwuemeka/" target="_blank" class="linkedin-link">
-                    LinkedIn Profile
+                    <i class="bx bxl-linkedin-square"></i> LinkedIn
                 </a>
                 <a href="https://www.linkedin.com/in/isiani-alexander-chukwuemeka/" target="_blank" class="linkedin-link">
                     Resume
